--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,39 +1,51 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-.App-header {
+  height: 100vh;
+  width: 100vw;
   background-color: #282c34;
-  min-height: 100vh;
+  display: grid;
+}
+
+.App-content {
+  padding: 20px 10px;
+  box-sizing: border-box;
+  overflow: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.b-chat {
+  max-width: 900px;
+  /* max-height: 900px; */
+  margin: auto;
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  border-radius: 5px;
+  background: #494f5e;
+}
+
+.b-chat__header {
+  font-size: 36px;
   color: white;
+  text-align: center;
+  padding: 10px 16px;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+.b-chat__window {
+  padding: 10px;
+  box-sizing: border-box;
+  /* background: #282c349a; */
+  background-color: #282c34;
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.b-chat__form {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  gap: 10px;
+  padding: 20px 16px;
 }
 
 /*# sourceMappingURL=App.css.map */
