--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -24,28 +24,34 @@
   border-radius: 5px;
   background: #494f5e;
 }
-
 .b-chat__header {
-  font-size: 36px;
-  color: white;
-  text-align: center;
   padding: 10px 16px;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
-
+.b-chat__title {
+  font-size: 24px;
+  color: white;
+  position: absolute;
+  left: 16px;
+}
+.b-chat__login {
+  font-size: 24px;
+  color: white;
+  margin: auto;
+}
 .b-chat__window {
   padding: 10px;
   box-sizing: border-box;
-  /* background: #282c349a; */
-  background-color: #282c34;
+  background: rgba(40, 44, 52, 0.6039215686);
   display: flex;
 }
-
 .b-chat__form {
   display: grid;
   grid-template-columns: 1fr auto;
   gap: 10px;
   padding: 20px 16px;
-}
-
-/*# sourceMappingURL=App.css.map */
+}/*# sourceMappingURL=App.css.map */
