--- a/src/styles/Index.css
+++ b/src/styles/Index.css
@@ -7,6 +7,4 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-}
-
-/*# sourceMappingURL=Index.css.map */
+}/*# sourceMappingURL=Index.css.map */
