--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -1,15 +1,16 @@
 .App {
     text-align: center;
     height: 100vh;
+    width: 100vw;
     background-color: #282c34;
-    display: flex;
-    flex-direction: column;
+    display: grid;
 }
 
-.App-header {
-    font-size: calc(10px + 2vmin);
-    color: white;
-    text-align: center;
+.App-content {
+    padding: 20px 10px;
+    box-sizing: border-box;
+    overflow: auto;
+    display: flex;
 }
 
 @import "blocks/chat";
