--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -48,12 +48,16 @@
   box-sizing: border-box;
   background: rgba(40, 44, 52, 0.6039215686);
   display: flex;
+  flex-direction: column;
+  overflow: auto;
+  gap: 10px;
 }
 .b-chat__form {
   display: grid;
   grid-template-columns: 1fr auto;
   gap: 10px;
   padding: 20px 16px;
+  align-items: center;
 }
 .b-chat__form > textarea {
   height: 50px;
@@ -70,8 +74,8 @@
   border-color: rgba(54, 102, 246, 0.4039215686);
 }
 .b-chat__form > button {
-  height: 50px;
-  width: 50px;
+  height: 35px;
+  width: 35px;
   display: flex;
   border: none;
   outline: none;
@@ -83,4 +87,36 @@
 }
 .b-chat__form > button:hover {
   fill: rgba(54, 102, 246, 0.4039215686);
+}
+
+.b-chatMessage {
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(41, 84, 131);
+  justify-items: start;
+  align-items: flex-start;
+  align-self: flex-start;
+  text-align: start;
+  max-width: 60%;
+  gap: 10px;
+  border-radius: 5px;
+}
+.b-chatMessage__author {
+  font-size: 26px;
+  font-weight: bold;
+  color: black;
+}
+.b-chatMessage__message {
+  font-size: 14px;
+  color: white;
+  white-space: pre-wrap;
+}
+.b-chatMessage_otherAuthor {
+  background-color: rgb(32, 110, 193);
+  justify-items: end;
+  align-items: flex-end;
+  align-self: flex-end;
+  text-align: end;
 }/*# sourceMappingURL=App.css.map */
