--- a/src/assets/styles/scss/blocks/_chat.scss
+++ b/src/assets/styles/scss/blocks/_chat.scss
@@ -37,6 +37,9 @@
         background: #282c349a;
         // background-color: #282c34;
         display: flex;
+        flex-direction: column;
+        overflow: auto;
+        gap: 10px;
     }
 
     &__form {
@@ -44,6 +47,7 @@
         grid-template-columns: 1fr auto;
         gap: 10px;
         padding: 20px 16px;
+        align-items: center;
 
         &>textarea {
             height: 50px;
@@ -62,8 +66,8 @@
         }
 
         &>button {
-            height: 50px;
-            width: 50px;
+            height: 35px;
+            width: 35px;
             display: flex;
             border: none;
             outline: none;
